Add mysql instance

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "plaza",
   "version": "0.0.1",
   "dependencies": {
-    "aws-sdk": "2.176.0"
+    "aws-sdk": "2.176.0",
+    "slappforge-sdk-aws": "0.0.5"
   }
 }
